Assignment_2/dem/md_sim.out
### Starting TaskPrologue of job 2775400 on a0801 at Tue Jun 24 22:56:50 CEST 2025
Running on cores 80-95 with governor ondemand
Tue Jun 24 22:56:50 2025       
+-----------------------------------------------------------------------------------------+
| NVIDIA-SMI 575.57.08              Driver Version: 575.57.08      CUDA Version: 12.9     |
|-----------------------------------------+------------------------+----------------------+
| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |
| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |
|                                         |                        |               MIG M. |
|=========================================+========================+======================|
|   0  NVIDIA A100-SXM4-40GB          On  |   00000000:96:00.0 Off |                    0 |
| N/A   32C    P0             54W /  400W |       0MiB /  40960MiB |      0%      Default |
|                                         |                        |             Disabled |
+-----------------------------------------+------------------------+----------------------+
                                                                                         
+-----------------------------------------------------------------------------------------+
| Processes:                                                                              |
|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |
|        ID   ID                                                               Usage      |
|=========================================================================================|
|  No running processes found                                                             |
+-----------------------------------------------------------------------------------------+
### Finished TaskPrologue

========= Molecular Dynamics Simulation =========
mkdir -p build
nvcc -O3 -std=c++17 -o build/md_sim src/main.cu src/md_kernel.cu src/io.cpp src/vtk_writer.cpp
src/main.cu(26): error: identifier "particles" is undefined
      for (const auto& p : particles) {
                           ^

1 error detected in the compilation of "src/main.cu".
make: *** [Makefile:22: build/md_sim] Error 2
=== JOB_STATISTICS ===
=== current date     : Tue Jun 24 22:56:52 CEST 2025
= Job-ID             : 2775400 on alex
= Job-Name           : md_sim
= Job-Command        : ./run.sh
= Initial workdir    : /home/hpc/hesp/hesp148v/HESP_SoSe_2025/Assignment_2/dem
= Queue/Partition    : a100
= Slurm account      : hesp with QOS=normal
= Features           : a100_40
= Requested resources:  for 00:10:00
= Elapsed runtime    : 00:00:02
= Total RAM usage    : 0.3 GiB of assigned  GiB (%)
= Node list          : a0801
= Subm/Elig/Start/End: 2025-06-24T22:56:48 / 2025-06-24T22:56:48 / 2025-06-24T22:56:49 / 2025-06-24T22:56:51
======================
=== Quota infos ======
    Path              Used     SoftQ    HardQ    Gracetime  Filec    FileQ    FiHaQ    FileGrace    
    /home/woody          0.0K  1000.0G  1500.0G        N/A       1    5,000K   7,500K        N/A    
    /home/hpc            7.7G   104.9G   209.7G        N/A  36,686      500K   1,000K        N/A    
======================
=== GPU utilization ==
gpu_name, gpu_bus_id, pid, gpu_utilization [%], mem_utilization [%], max_memory_usage [MiB], time [ms]
